last changes from hackaton
